[B]1.0.3[/B]
- Fixed: addons not working

[B]1.0.2[/B]
- Fixed: not all actor get grabbed

[B]1.0.1[/B]
- Fixed: fanart not get grabbed sometime

[B]1.0.0[/B]
- Initial